--- a/R/h2oRClient-package/NAMESPACE
+++ b/R/h2oRClient-package/NAMESPACE
@@ -1,5 +1,5 @@
 exportPattern("^[[:alpha:]]+")
-export('h2o.glm', 'h2o.glm.FV', 'h2o.kmeans', 'h2o.randomForest', 'h2o.prcomp', 'h2o.gbm', 'h2o.nn', 'h2o.predict', 'h2o.checkClient', 'h2o.importFile', 'h2o.importFolder', 'h2o.uploadFile', 'h2o.parseRaw', 'h2o.importFile.VA', 'h2o.importFolder.VA', 'h2o.importHDFS.VA', 'h2o.importURL.VA', 'h2o.uploadFile.VA', 'h2o.parseRaw.VA', 'h2o.ls', 'h2o.rm')
+export('h2o.glm', 'h2o.glm.FV', 'h2o.kmeans', 'h2o.randomForest', 'h2o.prcomp', 'h2o.gbm', 'h2o.nn', 'h2o.predict', 'h2o.checkClient', 'h2o.importFile', 'h2o.importFolder', 'h2o.uploadFile', 'h2o.parseRaw', 'h2o.ls', 'h2o.rm')
 exportMethods(
   "colnames",
   "show",
@@ -9,16 +9,17 @@ exportMethods(
 )
 exportClasses(
   "H2OClient",
-  "H2OGLMModel",
-  "H2OKMeansModel",
   "H2OParsedData",
   "H2ORawData",
+  "H2OGLMModel",
+  "H2OKMeansModel",
+  "H2ONNModel",
   "H2ODRFModel",
   "H2OPCAModel",
   "H2OGBMModel",
   "H2OModel",
-  "H2ORawDataVA",
-  "H2OParsedDataVA",
   "H2OGLMModelVA",
-  "H2OGLMGridVA"
+  "H2OGLMGridVA",
+  "H2ORFModelVA",
+  "H2OKMeansModelVA"
 )
